[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-to-duc"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = ["ducflair_duc"]

description = "Transform PDF's into Duc CAD files"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache-2.0" }

authors = [
    { name = "Ducflair", email = "support@ducflair.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
"Homepage" = "https://ducflair.com"
"Source" = "https://github.com/ducflair/pdf-to-duc"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdf_to_duc*"]
